# pyglam

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyglam.pyi  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  quat.rs  vec3.rs
test/: test_vec3.py
