[package]
name = "pyglam"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyglam"
crate-type = ["cdylib", "rlib"]

[dependencies]
either = "~1.15"
pyo3 = { version = "~0.27", default-features = false, features = [
    "either",
    "extension-module",
] }
glam = "~0.30"

# bin/stub_gen deps
# THESE SHOULD BE OPTIONAL, BUT PYO3 FREAKS OUT WITH THE MACROS
env_logger = { version = "~0.11" }
pyo3-stub-gen = { version = "~0.18", default-features = false, features = [
    "either",
] }

[[bin]]
name = "stub_gen"
doc = false
required-features = ["stub-gen"]

[features]
stub-gen = []
