[package]
name = "pyglam"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyglam"
crate-type = ["cdylib", "rlib"]

[dependencies]
either = "~1.15"
pyo3 = { version = "~0.27", default-features = false, features = [
    "either",
    "extension-module",
] }
glam = "~0.30"
# bin/stub_gen deps
env_logger = "~0.11"
pyo3-stub-gen = { version = "~0.18", default-features = false, features = [
    "either",
] }
rand = "~0.9"

simple-py-bevy = { "git" = "https://github.com/lskyweiler/simple-py-bevy", optional = true }
bevy = { version = "~0.17", optional = true }

[features]
f32 = []
py_bevy = ["dep:simple-py-bevy", "dep:bevy", "simple-py-bevy/pyo3"]
