[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "pyglam"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
    { name = "weiler", email = "lucas.l.weiler@leidos.com" },
    { name = "molnar", email = "andrew.b.molnar@leidos.com" },
]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/lskyweiler/pyglam"

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-benchmark[histogram]",
    "pylint",
    "maturin",
    "numpy",
    'maturin[patchelf] ; platform_system != "Windows"',
]
